--- a/dropbox-android-chooser-sdk-1.0/DropboxChooserSDK/project.properties
+++ b/dropbox-android-chooser-sdk-1.0/DropboxChooserSDK/project.properties
@@ -11,6 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-19
-android.library.reference.1=../appcompat_v7
-android.library.reference.2=../dropbox-android-chooser-sdk-1.0/DropboxChooserSDK
+target=android-17
+android.library=true
