--- a/Respeak/AndroidManifest.xml
+++ b/Respeak/AndroidManifest.xml
@@ -17,15 +17,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ListenActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> 
         </activity>
         
+        <activity
+            android:name=".ListenActivity"
+            android:label="@string/title_activity_listen" >
+        </activity>
+
         <!-- Needed for Dropbox Sync API -->
         <activity android:name="com.dropbox.sync.android.DbxAuthActivity" />
         <activity
