--- a/Respeak/AndroidManifest.xml
+++ b/Respeak/AndroidManifest.xml
@@ -79,7 +79,7 @@
         </activity>
         <activity
             android:name=".AccountBalanceDetailsActivity"
-            android:label="@string/title_activity_account_balance_details" >
+            android:label="@string/app_name" >
         </activity>
     </application>
 
