--- a/Respeak/AndroidManifest.xml
+++ b/Respeak/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uw.ictd.respeak"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="@string/pref_version_num_summ" >
 
     <uses-sdk
         android:minSdkVersion="11"
